select resource providers in DTS endpoints by request
This is related to #34.

Signed-off-by: Christian Lück <christian.lueck@uni-muenster.de>